syntax = "proto3";
package network.profile.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ignite/network/x/profile/types";

message Coordinator {
  uint64 coordinator_id = 1;
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  CoordinatorDescription description = 3 [(gogoproto.nullable) = false];
  bool active = 4;
}

message CoordinatorDescription {
  string identity = 1;
  string website = 2;
  string details = 3;
}

message CoordinatorByAddress {
  string address       = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 coordinator_id = 2;
}
